unpackaged/main/default/objects/blng__Invoice__c/fields/blng__InvoiceLocked__c.field-meta.xml
<CustomField>
    <fullName>blng__InvoiceLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Le paiement est en cours et la facture est verrouillée. Avant de la déverrouiller, vérifiez si un paiement a déjà été créé pour cette facture.</inlineHelpText>
    <label>Invoice Locked</label>
    <type>Checkbox</type>
</CustomField>