unpackaged/main/default/objects/blng__Invoice__c/fields/blng__PaymentsAgainstInvoice__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentsAgainstInvoice__c</fullName>
    <inlineHelpText>Somme des montants de paiement alloués à l&#39;en-tête de facture. Ne doit être utilisé que lorsque vous n&#39;utilisez pas les allocations de niveau ligne.</inlineHelpText>
    <label>Allocations Against Invoice</label>
    <summarizedField>blng__PaymentAllocationInvoice__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__PaymentAllocationInvoice__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__PaymentAllocationInvoice__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>