unpackaged/main/default/objects/blng__Invoice__c/fields/blng__PaymentsAgainstInvoiceLines__c.field-meta.xml
<CustomField>
    <fullName>blng__PaymentsAgainstInvoiceLines__c</fullName>
    <inlineHelpText>Somme des montants de paiements alloués aux lignes de facture dans la facture.</inlineHelpText>
    <label>Allocations Against Invoice Lines</label>
    <summarizedField>blng__InvoiceLine__c.blng__PaymentsAgainstInvoiceLines__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>