unpackaged/main/default/objects/blng__Invoice__c/fields/blng__StatusFlag__c.field-meta.xml
<CustomField>
    <fullName>blng__StatusFlag__c</fullName>
    <description>Yellow - Invoices that are Active
Green - Invoices that have been Paid
Red - Invoices that are Overdue
White - Invoices that have been Cancelled</description>
    <formula>IF(ISPICKVAL(blng__InvoiceStatus__c, &#39;Cancelled&#39;),IMAGE(&quot;/resource/blng__images/Flag_white.gif&quot;, &quot;White&quot;),
IF((blng__Balance__c = 0), Image(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;) ,
     IF(TODAY() &gt;  blng__DueDate__c &amp;&amp; (blng__Balance__c &gt; 0),                                               
			Image(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;),
			Image(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Yellow&quot;)
		)
))</formula>
    <inlineHelpText>Orange = facture active avec un solde ; Vert = pas de solde dû ; Rouge = arriéré ; Blanc = annulé</inlineHelpText>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>