unpackaged/main/default/objects/blng__Invoice__c/fields/blng__TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TaxAmount__c</fullName>
    <inlineHelpText>Somme de toutes les taxes pour cette facture</inlineHelpText>
    <label>Tax</label>
    <summarizedField>blng__InvoiceLine__c.blng__TaxAmount__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>