unpackaged/main/default/objects/blng__Invoice__c/fields/blng__TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>blng__TotalAmount__c</fullName>
    <inlineHelpText>Total facture (taxes comprises). Égal au sous-total + taxes.</inlineHelpText>
    <label>Total Amount (With Tax)</label>
    <summarizedField>blng__InvoiceLine__c.blng__TotalAmount__c</summarizedField>
    <summaryForeignKey>blng__InvoiceLine__c.blng__Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>