unpackaged/main/default/objects/blng__Invoice__c/fields/DocuSignBatchStatus__c.field-meta.xml
<CustomField>
    <fullName>DocuSignBatchStatus__c</fullName>
    <label>DocuSign Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Erreur</fullName>
            </value>
            <value>
                <fullName>Succès</fullName>
            </value>
            <value>
                <fullName>Traitement…</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>