unpackaged/main/default/objects/blng__Invoice__c/fields/Facture_Genere__c.field-meta.xml
<CustomField>
    <fullName>Facture_Genere__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Facture Généré</label>
    <type>Checkbox</type>
</CustomField>