unpackaged/main/default/objects/blng__Invoice__c/fields/Log_del__c.field-meta.xml
<CustomField>
    <fullName>Log_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocuSign Log</label>
    <referenceTo>dfsle__Log__c</referenceTo>
    <relationshipLabel>DocuSign Logs</relationshipLabel>
    <relationshipName>DocuSignLogs_del</relationshipName>
    <type>Lookup</type>
</CustomField>