unpackaged/main/default/objects/blng__Invoice__c/fields/PF_Internal__c.field-meta.xml
<CustomField>
    <fullName>PF_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal</label>
    <type>Checkbox</type>
</CustomField>