unpackaged/main/default/objects/blng__Invoice__c/fields/PF_Orders_List__c.field-meta.xml
<CustomField>
    <fullName>PF_Orders_List__c</fullName>
    <label>Orders List</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>