unpackaged/main/default/objects/blng__Invoice__c/fields/Posted_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Posted_Invoice_Number__c</fullName>
    <label>Numéro de facture</label>
    <length>15</length>
    <type>Text</type>
</CustomField>