unpackaged/main/default/objects/blng__Invoice__c/listViews/blng__All.listView-meta.xml
<ListView>
    <fullName>blng__All</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__DueDate__c</columns>
    <columns>blng__InvoiceStatus__c</columns>
    <columns>blng__StatusFlag__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Invoices</label>
</ListView>