unpackaged/main/default/objects/blng__Invoice__c/listViews/blng__All1.listView-meta.xml
<ListView>
    <fullName>blng__All1</fullName>
    <columns>NAME</columns>
    <columns>blng__Account__c</columns>
    <columns>blng__Balance__c</columns>
    <columns>blng__InvoiceDate__c</columns>
    <columns>blng__TargetDate__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>blng__InvoiceStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>